--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;">
 
 <head>
   <meta charset="utf-8">
   <title>Webpack App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      margin: 0;
+      height: 100%;
+    }
+  </style>
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app" style="height: 100%;"></div>
 </body>
 
 </html>
